--- a/Time_series_Entropy.ipynb
+++ b/Time_series_Entropy.ipynb
@@ -67,11 +67,60 @@
     "        D_value.append(np.abs(U[i] - U).max(axis=1))\n",
     "    D_value = np.array(D_value)\n",
     "    D_value = np.exp(-np.square(D_value) / r)\n",
+    "    #set diagonal to 0\n",
+    "    D_value = D_value - np.diag(np.diag(D_value))\n",
     "    for i in range(U.shape[0]):\n",
     "        entropy += np.sum(D_value[i])\n",
     "    entropy = entropy / (U.shape[0] * (U.shape[0] - 1))\n",
     "    return entropy\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#np.diag example\n",
+    "import numpy as np\n",
+    "np.diag(np.diag([1,2,3,4]))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def Hurst(data, i):\n",
+    "    \"\"\"Return Hurst exponent of data.\"\"\"\n",
+    "    # Create the range of lag values\n",
+    "    def subHurst(x):\n",
+    "        x = np.array(x)\n",
+    "        m = np.mean(x)\n",
+    "        y = x - m\n",
+    "        z = np.cumsum(y)\n",
+    "        r = np.ptp(z)\n",
+    "        s = np.std(x)\n",
+    "        return r/s\n",
+    "    \n",
+    "    e = data['DD.ret'].rolling(i).apply(subHurst)\n",
+    "    r = np.log(e) / np.log(i)\n",
+    "    return r"
    ]
   }
  ],
