--- a/xarray.ipynb
+++ b/xarray.ipynb
@@ -597,7 +597,7 @@
     "data_agg = data.groupby(xr.apply_ufunc(filt_func, data['D'],vectorize=True)).std()\n",
     "\n",
     "\n",
-    "def view_data_category(data, coor, conditions, agg_func):\n",
+    "def view_data_category(data, coor, conditions, agg_func = np.mean):\n",
     "    filt_func = filter_fun_wrapper(conditions)\n",
     "    data_agg = data.groupby(xr.apply_ufunc(filt_func, data[coor],vectorize=True)).reduce(agg_func)\n",
     "    return data_agg\n",
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -976,116 +976,47 @@
        "  stroke: currentColor;\n",
        "  fill: currentColor;\n",
        "}\n",
-       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray (A: 2, B: 3, C: 4, D: 2)&gt;\n",
-       "array([[[[0.8669788 , 0.27951738],\n",
-       "         [1.29155348, 0.13770573],\n",
-       "         [0.32188274, 0.03794922],\n",
-       "         [1.02725153, 0.51644209]],\n",
+       "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray (A: 2, B: 3, C: 4)&gt;\n",
+       "array([[[-0.79685587, -0.65504007,  0.70061817,  0.76440108],\n",
+       "        [ 0.75215128,  1.69900614,  0.49122975, -1.0095188 ],\n",
+       "        [-0.88335993,  1.19359425, -0.31669669, -0.35314865]],\n",
        "\n",
-       "        [[0.23691257, 0.37250443],\n",
-       "         [0.48177062, 0.47605395],\n",
-       "         [0.20266898, 0.6613796 ],\n",
-       "         [0.9802876 , 0.57519713]],\n",
-       "\n",
-       "        [[0.50311614, 0.07318613],\n",
-       "         [0.55624682, 0.61799812],\n",
-       "         [0.82438778, 0.07966344],\n",
-       "         [0.66093667, 0.20322118]]],\n",
-       "\n",
-       "\n",
-       "       [[[0.61496053, 0.13749887],\n",
-       "         [0.18367906, 0.53683047],\n",
-       "         [0.36807681, 0.08772802],\n",
-       "         [0.73189953, 0.02751093]],\n",
-       "\n",
-       "        [[0.81893584, 0.07516398],\n",
-       "         [1.36128584, 1.03183854],\n",
-       "         [1.2821732 , 0.53161372],\n",
-       "         [0.8275909 , 0.70330576]],\n",
-       "\n",
-       "        [[0.80103888, 0.21376147],\n",
-       "         [0.67209537, 0.28740902],\n",
-       "         [0.27893881, 0.80649731],\n",
-       "         [1.04923355, 0.91226684]]]])\n",
+       "       [[ 1.74144844, -1.10007715,  0.70315567,  0.14022566],\n",
+       "        [ 0.01285384, -0.4669358 ,  0.50648836, -0.39893283],\n",
+       "        [-1.48871295, -0.02102195, -1.36570141,  0.28675129]]])\n",
        "Coordinates:\n",
-       "    E        (D) int64 0 1 2 3 4\n",
-       "  * D        (D) int64 0 1\n",
-       "Dimensions without coordinates: A, B, C</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span>A</span>: 2</li><li><span>B</span>: 3</li><li><span>C</span>: 4</li><li><span class='xr-has-index'>D</span>: 2</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9d0c7962-1f3f-49ab-a46b-32baccbe1738' class='xr-array-in' type='checkbox' checked><label for='section-9d0c7962-1f3f-49ab-a46b-32baccbe1738' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.867 0.2795 1.292 0.1377 0.3219 ... 0.2874 0.2789 0.8065 1.049 0.9123</span></div><div class='xr-array-data'><pre>array([[[[0.8669788 , 0.27951738],\n",
-       "         [1.29155348, 0.13770573],\n",
-       "         [0.32188274, 0.03794922],\n",
-       "         [1.02725153, 0.51644209]],\n",
+       "    E        int64 1\n",
+       "Dimensions without coordinates: A, B, C</pre><div class='xr-wrap' style='display:none'><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'></div><ul class='xr-dim-list'><li><span>A</span>: 2</li><li><span>B</span>: 3</li><li><span>C</span>: 4</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-8cfe480b-1cc0-4205-a251-4ac345290ea5' class='xr-array-in' type='checkbox' checked><label for='section-8cfe480b-1cc0-4205-a251-4ac345290ea5' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>-0.7969 -0.655 0.7006 0.7644 0.7522 ... -1.489 -0.02102 -1.366 0.2868</span></div><div class='xr-array-data'><pre>array([[[-0.79685587, -0.65504007,  0.70061817,  0.76440108],\n",
+       "        [ 0.75215128,  1.69900614,  0.49122975, -1.0095188 ],\n",
+       "        [-0.88335993,  1.19359425, -0.31669669, -0.35314865]],\n",
        "\n",
-       "        [[0.23691257, 0.37250443],\n",
-       "         [0.48177062, 0.47605395],\n",
-       "         [0.20266898, 0.6613796 ],\n",
-       "         [0.9802876 , 0.57519713]],\n",
-       "\n",
-       "        [[0.50311614, 0.07318613],\n",
-       "         [0.55624682, 0.61799812],\n",
-       "         [0.82438778, 0.07966344],\n",
-       "         [0.66093667, 0.20322118]]],\n",
-       "\n",
-       "\n",
-       "       [[[0.61496053, 0.13749887],\n",
-       "         [0.18367906, 0.53683047],\n",
-       "         [0.36807681, 0.08772802],\n",
-       "         [0.73189953, 0.02751093]],\n",
-       "\n",
-       "        [[0.81893584, 0.07516398],\n",
-       "         [1.36128584, 1.03183854],\n",
-       "         [1.2821732 , 0.53161372],\n",
-       "         [0.8275909 , 0.70330576]],\n",
-       "\n",
-       "        [[0.80103888, 0.21376147],\n",
-       "         [0.67209537, 0.28740902],\n",
-       "         [0.27893881, 0.80649731],\n",
-       "         [1.04923355, 0.91226684]]]])</pre></div></div></li><li class='xr-section-item'><input id='section-6b9f2fbf-5ce6-4b6c-8c3a-7b36a5e19ad8' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6b9f2fbf-5ce6-4b6c-8c3a-7b36a5e19ad8' class='xr-section-summary' >Coordinates: <span>(2)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>E</span></div><div class='xr-var-dims'>(D)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 1 2 3 4</div><input id='attrs-1411efcd-02c4-492c-b7e5-917878d5570b' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-1411efcd-02c4-492c-b7e5-917878d5570b' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-636e82be-9c16-4bf5-8a29-62c316ee1116' class='xr-var-data-in' type='checkbox'><label for='data-636e82be-9c16-4bf5-8a29-62c316ee1116' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([0, 1, 2, 3, 4])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>D</span></div><div class='xr-var-dims'>(D)</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>0 1</div><input id='attrs-711cd522-a0ab-4077-80fe-122715d23d4c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-711cd522-a0ab-4077-80fe-122715d23d4c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b8e3c2c6-c13a-44ce-a17d-3eb29dfc84dc' class='xr-var-data-in' type='checkbox'><label for='data-b8e3c2c6-c13a-44ce-a17d-3eb29dfc84dc' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([0, 1])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c848021d-5fab-4252-a26d-50aa8255f78c' class='xr-section-summary-in' type='checkbox'  ><label for='section-c848021d-5fab-4252-a26d-50aa8255f78c' class='xr-section-summary' >Indexes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-index-name'><div>D</div></div><div class='xr-index-preview'>PandasIndex</div><div></div><input id='index-27ef29b9-053b-4f32-9223-dd4a63eab907' class='xr-index-data-in' type='checkbox'/><label for='index-27ef29b9-053b-4f32-9223-dd4a63eab907' title='Show/Hide index repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-index-data'><pre>PandasIndex(Index([0, 1], dtype=&#x27;int64&#x27;, name=&#x27;D&#x27;))</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-32bbf1b1-3798-45bc-a3bd-856785e4a83b' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-32bbf1b1-3798-45bc-a3bd-856785e4a83b' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       [[ 1.74144844, -1.10007715,  0.70315567,  0.14022566],\n",
+       "        [ 0.01285384, -0.4669358 ,  0.50648836, -0.39893283],\n",
+       "        [-1.48871295, -0.02102195, -1.36570141,  0.28675129]]])</pre></div></div></li><li class='xr-section-item'><input id='section-267edd3a-f0bc-4b7c-969e-c11f014d7595' class='xr-section-summary-in' type='checkbox'  checked><label for='section-267edd3a-f0bc-4b7c-969e-c11f014d7595' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>E</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>int64</div><div class='xr-var-preview xr-preview'>1</div><input id='attrs-5b0e404b-2a6e-4a62-936e-4a8cbaf973ee' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5b0e404b-2a6e-4a62-936e-4a8cbaf973ee' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0bb1e9ed-590e-4eac-bb1f-16f4639b701c' class='xr-var-data-in' type='checkbox'><label for='data-0bb1e9ed-590e-4eac-bb1f-16f4639b701c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(1)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-bde891c5-db33-45d5-bbf5-581907ba132d' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-bde891c5-db33-45d5-bbf5-581907ba132d' class='xr-section-summary'  title='Expand/collapse section'>Indexes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'></ul></div></li><li class='xr-section-item'><input id='section-e6d116b5-dbd7-489e-8e24-b63f1e60ff23' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-e6d116b5-dbd7-489e-8e24-b63f1e60ff23' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
-       "<xarray.DataArray (A: 2, B: 3, C: 4, D: 2)>\n",
-       "array([[[[0.8669788 , 0.27951738],\n",
-       "         [1.29155348, 0.13770573],\n",
-       "         [0.32188274, 0.03794922],\n",
-       "         [1.02725153, 0.51644209]],\n",
+       "<xarray.DataArray (A: 2, B: 3, C: 4)>\n",
+       "array([[[-0.79685587, -0.65504007,  0.70061817,  0.76440108],\n",
+       "        [ 0.75215128,  1.69900614,  0.49122975, -1.0095188 ],\n",
+       "        [-0.88335993,  1.19359425, -0.31669669, -0.35314865]],\n",
        "\n",
-       "        [[0.23691257, 0.37250443],\n",
-       "         [0.48177062, 0.47605395],\n",
-       "         [0.20266898, 0.6613796 ],\n",
-       "         [0.9802876 , 0.57519713]],\n",
-       "\n",
-       "        [[0.50311614, 0.07318613],\n",
-       "         [0.55624682, 0.61799812],\n",
-       "         [0.82438778, 0.07966344],\n",
-       "         [0.66093667, 0.20322118]]],\n",
-       "\n",
-       "\n",
-       "       [[[0.61496053, 0.13749887],\n",
-       "         [0.18367906, 0.53683047],\n",
-       "         [0.36807681, 0.08772802],\n",
-       "         [0.73189953, 0.02751093]],\n",
-       "\n",
-       "        [[0.81893584, 0.07516398],\n",
-       "         [1.36128584, 1.03183854],\n",
-       "         [1.2821732 , 0.53161372],\n",
-       "         [0.8275909 , 0.70330576]],\n",
-       "\n",
-       "        [[0.80103888, 0.21376147],\n",
-       "         [0.67209537, 0.28740902],\n",
-       "         [0.27893881, 0.80649731],\n",
-       "         [1.04923355, 0.91226684]]]])\n",
+       "       [[ 1.74144844, -1.10007715,  0.70315567,  0.14022566],\n",
+       "        [ 0.01285384, -0.4669358 ,  0.50648836, -0.39893283],\n",
+       "        [-1.48871295, -0.02102195, -1.36570141,  0.28675129]]])\n",
        "Coordinates:\n",
-       "    E        (D) int64 0 1 2 3 4\n",
-       "  * D        (D) int64 0 1\n",
+       "    E        int64 1\n",
        "Dimensions without coordinates: A, B, C"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_agg"
+    "#exlude some values in one coordinate\n",
+    "exclude = [3, 4]\n",
+    "data = data.sel(D=~data['D'].isin(exclude))"
    ]
   },
   {
@@ -1133,6 +1064,186 @@
    ],
    "source": [
     "xr.apply_ufunc(filt_func, data['D'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load path/YYMMDD-UKEY.tblc file for each day\n",
+    "import os\n",
+    "import datetime\n",
+    "import cpptable\n",
+    "\n",
+    "date = datetime.datetime(2023, 3, 1)\n",
+    "path = 'path/YYMMDD-UKEY.tblc'\n",
+    "\n",
+    "cpptable.read_table(path.replace('YYMMDD', date.strftime('%y%m%d')))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#second to hour:min:00\n",
+    "def sec_to_hms(sec):\n",
+    "    minute = int(sec) // 60\n",
+    "    hour = minute // 60\n",
+    "    minute = minute % 60\n",
+    "    return f'{hour}:{minute:02d}:00'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for each datapoint in second // 60 then * 60 to get the minute\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.DataFrame({'time': pd.date_range('2020-01-01', periods=10, freq='s'), 'value': np.random.randn(10)})\n",
+    "data['second'] = data['time'].dt.second\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>value</th>\n",
+       "      <th>second</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-01-01 00:00:00</td>\n",
+       "      <td>0.945804</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-01-01 00:00:01</td>\n",
+       "      <td>1.370975</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-01-01 00:00:02</td>\n",
+       "      <td>0.491514</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-01-01 00:00:03</td>\n",
+       "      <td>-0.904739</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-01-01 00:00:04</td>\n",
+       "      <td>0.435679</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-01-01 00:00:05</td>\n",
+       "      <td>-0.285310</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-01-01 00:00:06</td>\n",
+       "      <td>1.093225</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2020-01-01 00:00:07</td>\n",
+       "      <td>0.436733</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2020-01-01 00:00:08</td>\n",
+       "      <td>-1.042579</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2020-01-01 00:00:09</td>\n",
+       "      <td>-0.767006</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 time     value  second\n",
+       "0 2020-01-01 00:00:00  0.945804       0\n",
+       "1 2020-01-01 00:00:01  1.370975       1\n",
+       "2 2020-01-01 00:00:02  0.491514       2\n",
+       "3 2020-01-01 00:00:03 -0.904739       3\n",
+       "4 2020-01-01 00:00:04  0.435679       4\n",
+       "5 2020-01-01 00:00:05 -0.285310       5\n",
+       "6 2020-01-01 00:00:06  1.093225       6\n",
+       "7 2020-01-01 00:00:07  0.436733       7\n",
+       "8 2020-01-01 00:00:08 -1.042579       8\n",
+       "9 2020-01-01 00:00:09 -0.767006       9"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#for each data rowa:\n",
+    "for i, row in data.iterrows():\n",
+    "    print(row['time'], row['value'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np array replace nan with 0\n",
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([1, 2, 3, np.nan])\n",
+    "a[np.isnan(a)] = 0"
    ]
   }
  ],
