--- a/xarray.ipynb
+++ b/xarray.ipynb
@@ -1021,6 +1021,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_horizon = ['1m', '3m', '10m', '30m', '1h', '2h', '7h', 'eod']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -1088,14 +1097,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#second to hour:min:00\n",
-    "def sec_to_hms(sec):\n",
-    "    minute = int(sec) // 60\n",
-    "    hour = minute // 60\n",
-    "    minute = minute % 60\n",
-    "    return f'{hour}:{minute:02d}:00'"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1239,11 +1241,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np array replace nan with 0\n",
-    "import numpy as np\n",
+    "def remore_parentheses(string):\n",
+    "    #extract the string in the parentheses\n",
+    "    if \"(\" not in string:\n",
+    "        return string\n",
+    "    return string[string.find(\"(\") + 1 : string.find(\")\")]\n",
     "\n",
-    "a = np.array([1, 2, 3, np.nan])\n",
-    "a[np.isnan(a)] = 0"
+    "#remove parentheses for all elements in a data['D']\n",
+    "data['D'] = data['D'].apply(remore_parentheses)"
    ]
   }
  ],
