--- a/Sample_virtualize.ipynb
+++ b/Sample_virtualize.ipynb
@@ -52,6 +52,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#format LQ_tdvol_so_wgt_exec\n",
+    "def phrase(string):\n",
+    "    data = string.split('_')\n",
+    "    index = 3\n",
+    "    #check if so or Ts\n",
+    "    if data[index] == 'so':\n",
+    "        data[index] = 'so'\n",
+    "    else:\n",
+    "        data[index] = 'Ts'\n",
+    "    index += 1\n",
+    "    #check if wgt or ''\n",
+    "    if data[index] == 'wgt':\n",
+    "        data[index] = 'wgt'\n",
+    "        index += 1\n",
+    "    #check if exec or ''\n",
+    "    if data[index] == 'exec':\n",
+    "        data[index] = 'exec'\n",
+    "    \n",
+    "    return data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
